--- a/assets/scss/blocks/_button.scss
+++ b/assets/scss/blocks/_button.scss
@@ -9,4 +9,16 @@
   color: #fff;
   padding: 20px 40px;
   font-size: 26px;
+  border: 2px solid transparent;
+  transition: all .3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+    background-color: transparent;
+    border: 2px solid #4b6cc1;
+  }
+
+  &:active {
+    opacity: .4;
+  }
 }
