--- a/assets/scss/blocks/_hero.scss
+++ b/assets/scss/blocks/_hero.scss
@@ -1,7 +1,21 @@
 .hero {
   background-color: #191A1D;
+  padding: 100px 0 200px 0;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background-color: #5e5e5e;
+    clip-path: polygon(100% 100%, 0 0, 0 100%);
+  }
 }
 
 .hero__wrapper {
   display: flex;
+  align-items: center;
 }
