--- a/assets/scss/blocks/_hero-left.scss
+++ b/assets/scss/blocks/_hero-left.scss
@@ -16,3 +16,30 @@
   line-height: 1.5;
   color: #ABABAB;
 }
+
+
+@media only screen and(max-width:1136px) {
+
+  .hero-left {
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 0;
+  }
+  .hero-left__heading {
+    font-size: 48px;
+  }
+  .hero-left__text {
+    font-size: 24px;
+  }
+}
+
+@media only screen and(max-width: 600px) {
+
+  .hero-left__heading {
+    font-size: 36px;
+  }
+  .hero-left__text {
+    font-size: 20px;
+  }
+}
