--- a/assets/scss/blocks/_hero-right.scss
+++ b/assets/scss/blocks/_hero-right.scss
@@ -1,8 +1,11 @@
+.hero-right {
+  width: 100%;
+}
+
 .hero-right__inner {
   background-color: #111;
-  width: 130%;
+  width: 70%;
   height: 450px;
-  display: block;
 }
 
 .hero-right__img {
@@ -11,4 +14,62 @@
   margin-right: auto;
   display: block;
   padding-top: 50px;
+  width: 300px;
+}
+
+
+@media only screen and(max-width:1136px) {
+
+  .hero-right__inner {
+    margin-top: 50px;
+    width: 100%;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 550px;
+  }
+  
+  .hero-right__img {
+    width: 500px;
+    height: 600px;
+  }
+}
+
+@media only screen and(max-width: 650px) {
+
+  .hero-right__inner {
+    max-width: 450px;
+    height: 500px;
+  }
+  
+  .hero-right__img {
+    width: 350px;
+    padding-top: 0;
+  }
+}
+
+
+@media only screen and(max-width: 480px) {
+
+  .hero-right__inner {
+    max-width: 400px;
+    height: 490px;
+  }
+  
+  .hero-right__img {
+    width: 300px;
+  }
+}
+
+@media only screen and(max-width: 400px) {
+
+  .hero-right__inner {
+    max-width: 320px;
+    height: 450px;
+  }
+  
+  .hero-right__img {
+    padding-top: -50px;
+    width: 250px;
+  }
 }
