--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -456,10 +456,12 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
+  display: none;
 }
 
 @media only screen and (max-width: 768px) {
   .site-header__burger {
+    display: block;
     position: relative;
     z-index: 20;
   }
