--- a/assets/scss/blocks/_site-header.scss
+++ b/assets/scss/blocks/_site-header.scss
@@ -53,6 +53,14 @@
 
 @media only screen and(max-width: 768px) {
 
+  .site-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    padding: 40px 20px;
+  }
   .site-header__burger {
     display: block;
     position: relative;
