--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -11,8 +11,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
-  color: #5e5e5e;
-  background-color: #5e5e5e;
+  background-color: #eee;
 }
 
 @media only screen and(max-width: 768px) {
