--- a/assets/scss/blocks/_hero.scss
+++ b/assets/scss/blocks/_hero.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 150px;
-    background-color: #5e5e5e;
+    background-color: #eee;
     clip-path: polygon(100% 100%, 0 0, 0 100%);
     border: none;
   }
