--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -355,14 +355,21 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
-  color: #5e5e5e;
-  background-color: #5e5e5e;
+  background-color: #eee;
 }
 
 @media only screen and (max-width: 768px) {
   body {
     margin-top: 135px;
   }
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 .container {
@@ -610,7 +617,7 @@ body {
   left: 0;
   width: 100%;
   height: 150px;
-  background-color: #5e5e5e;
+  background-color: #eee;
   -webkit-clip-path: polygon(100% 100%, 0 0, 0 100%);
           clip-path: polygon(100% 100%, 0 0, 0 100%);
   border: none;
@@ -750,6 +757,144 @@ body {
   .hero-right__img {
     padding-top: -50px;
     width: 250px;
+  }
+}
+
+.projects {
+  background-color: #eee;
+  padding: 100px 0 200px 0;
+  position: relative;
+  color: #111;
+  margin-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.projects::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-color: #191A1D;
+  -webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
+          clip-path: polygon(0 100%, 100% 0, 100% 100%);
+  border: none;
+}
+
+.projects__title {
+  font-size: 56px;
+}
+
+.projects__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.projects__link {
+  max-width: 400px;
+  display: block;
+  -webkit-box-shadow: 0 0 10px 10px #ddd;
+          box-shadow: 0 0 10px 10px #ddd;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 30px;
+  text-decoration: none;
+  color: #111;
+}
+
+.projects__img {
+  border-radius: 10px;
+}
+
+@media only screen and (max-width: 460px) {
+  .projects__link {
+    margin: 15px 0;
+  }
+  .projects__img {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .projects__link {
+    margin: 15px 0;
+  }
+  .projects__img {
+    width: 250px;
+  }
+}
+
+.contacts {
+  background-color: #191A1D;
+  padding: 100px 0;
+}
+
+.contacts__container {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.contacts__title {
+  margin: 0;
+  color: #fff;
+  font-size: 56px;
+  margin-bottom: 20px;
+}
+
+.contacts__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.contacts__input {
+  border: none;
+  padding: 20px 30px;
+  border-radius: 50px;
+  margin: 10px;
+  width: 60%;
+  outline: none;
+  resize: vertical;
+}
+
+.contacts__input:active, .contacts__input:focus {
+  -webkit-box-shadow: 0 0 3px 3px #777;
+          box-shadow: 0 0 3px 3px #777;
+}
+
+.contacts__btn {
+  margin-top: 25px;
+  padding: 15px 30px;
+}
+
+@media only screen and (max-width: 768px) {
+  .contacts__input {
+    width: 90%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
