complate footer with responsive

--- a/assets/scss/blocks/_projects.scss
+++ b/assets/scss/blocks/_projects.scss
@@ -1,6 +1,6 @@
 .projects {
   background-color: #eee;
-  padding: 100px 0 200px 0;
+  padding: 50px 0 200px 0;
   position: relative;
   color: #111;
   margin-left: 30px;
@@ -24,6 +24,7 @@
 
 .projects__title {
   font-size: 56px;
+  margin-left: 30px;
 }
 .projects__list {
   display: flex;
