--- a/assets/scss/blocks/_contacts.scss
+++ b/assets/scss/blocks/_contacts.scss
@@ -1,7 +1,26 @@
 .contacts {
   background-color: #191A1D;
-  padding: 100px 0;
+  padding: 100px 0 200px 0;
+  position: relative;
+  color: #111;
+  margin-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 100px 15px 280px 15px;
+  
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background-color:#eee;
+    clip-path: polygon(100% 100%, 0 0, 0 100%);
+    border: none;
+  }
 }
+
 .contacts__container {
   max-width: 1300px;
   margin-left: auto;
@@ -43,5 +62,6 @@
 
   .contacts__input {
     width: 90%;
+    padding: 14px 28px;
   }
 }
