--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -762,7 +762,7 @@ body {
 
 .projects {
   background-color: #eee;
-  padding: 100px 0 200px 0;
+  padding: 50px 0 200px 0;
   position: relative;
   color: #111;
   margin-left: 30px;
@@ -787,6 +787,7 @@ body {
 
 .projects__title {
   font-size: 56px;
+  margin-left: 30px;
 }
 
 .projects__list {
@@ -841,7 +842,26 @@ body {
 
 .contacts {
   background-color: #191A1D;
-  padding: 100px 0;
+  padding: 100px 0 200px 0;
+  position: relative;
+  color: #111;
+  margin-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 100px 15px 280px 15px;
+}
+
+.contacts::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-color: #eee;
+  -webkit-clip-path: polygon(100% 100%, 0 0, 0 100%);
+          clip-path: polygon(100% 100%, 0 0, 0 100%);
+  border: none;
 }
 
 .contacts__container {
@@ -895,6 +915,133 @@ body {
 @media only screen and (max-width: 768px) {
   .contacts__input {
     width: 90%;
+    padding: 14px 28px;
+  }
+}
+
+.site-footer {
+  padding: 50px 0 20px 0;
+}
+
+.site-footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.site-footer__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.site-footer__location {
+  font-size: 36px;
+  margin: 0;
+}
+
+.site-footer__address {
+  font-size: 28px;
+}
+
+.site-footer__btn:hover {
+  background-color: #191a1d;
+  border: 2px solid transparent;
+}
+
+.site-footer__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.site-footer__links {
+  text-decoration: none;
+  color: #191a1d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 18px;
+}
+
+.site-footer__links:hover {
+  color: #4b6cc1;
+}
+
+.site-footer__links:active {
+  opacity: .7;
+}
+
+.site-footer__links::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  margin-right: 12px;
+}
+
+.site-footer__phone::before {
+  background-image: url("../images/phone.svg");
+}
+
+.site-footer__gmail::before {
+  background-image: url("../images/gmail.svg");
+}
+
+.site-footer__telegram::before {
+  background-image: url("../images/telegram.svg");
+}
+
+.site-footer__facebook::before {
+  background-image: url("../images/facebook.svg");
+}
+
+.site-footer__bottom {
+  text-align: center;
+  margin-top: 80px;
+}
+
+@media only screen and (max-width: 700px) {
+  .site-footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .site-footer__left {
+    margin-bottom: 50px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .site-footer__container {
+    max-width: 100vw;
   }
 }
 /*# sourceMappingURL=styles.css.map */
