--- a/assets/scss/blocks/_contacts.scss
+++ b/assets/scss/blocks/_contacts.scss
@@ -1,9 +1,8 @@
 .contacts {
   background-color: #191A1D;
-  padding: 100px 0 200px 0;
+  padding: 200px 0;
   position: relative;
   color: #111;
-  margin-left: 30px;
   margin-left: auto;
   margin-right: auto;
   padding: 100px 15px 280px 15px;
