--- a/assets/scss/blocks/_site-header.scss
+++ b/assets/scss/blocks/_site-header.scss
@@ -1,6 +1,16 @@
 .site-header {
   background-color: #191A1D;
-  padding: 60px 0;
+  padding: 40px 0;
+  transition: all .5s ease;
+}
+
+.site-header.site-header--fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 20;
+  transition: all .5s ease;
 }
 .site-header__container {
   max-width: 1400px;
@@ -54,11 +64,6 @@
 @media only screen and(max-width: 768px) {
 
   .site-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
     padding: 40px 20px;
   }
   .site-header__burger {
