--- a/assets/scss/blocks/_nav.scss
+++ b/assets/scss/blocks/_nav.scss
@@ -8,6 +8,15 @@
 
 .nav__item {
   margin: 0 25px;
+
+  &.active {
+    & .nav__link {
+      color: #fff;
+      &::after {
+        width: 60%;
+      }
+    }
+  }
 }
 
 .nav__link {
