--- a/assets/scss/blocks/_projects.scss
+++ b/assets/scss/blocks/_projects.scss
@@ -35,9 +35,8 @@
   margin: 0;
   padding: 0;
 }
-.projects__link {
+.projects__item {
   max-width: 400px;
-  display: block;
   box-shadow: 0 0 10px 10px #ddd;
   padding: 20px;
   border-radius: 10px;
@@ -45,11 +44,38 @@
   text-decoration: none;
   color: #111;
 }
+.projects__item-bottom {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.projects__item-center {
+  display: flex;
+  justify-content: space-around;
+}
+.projects__link {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #4b6cc1;
+  margin-top: 10px;
+  border: 2px solid transparent;
+  transition: all .5s ease;
+
+  &:hover {
+    border: 2px solid #4b6cc1;
+    background-color: transparent;
+    color: #191A1D;
+  }
+}
+
 .projects__img {
   border-radius: 10px;
-}
-.projects__img-title {
-
+  width: 360px;
+  height: 360px;
+  object-fit: cover;
 }
 
 
