--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -512,6 +512,14 @@ body {
   margin: 0 25px;
 }
 
+.nav__item.active .nav__link {
+  color: #fff;
+}
+
+.nav__item.active .nav__link::after {
+  width: 60%;
+}
+
 .nav__link {
   text-decoration: none;
   color: #ababab;
@@ -807,9 +815,8 @@ body {
   padding: 0;
 }
 
-.projects__link {
+.projects__item {
   max-width: 400px;
-  display: block;
   -webkit-box-shadow: 0 0 10px 10px #ddd;
           box-shadow: 0 0 10px 10px #ddd;
   padding: 20px;
@@ -819,8 +826,50 @@ body {
   color: #111;
 }
 
+.projects__item-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.projects__item-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.projects__link {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #4b6cc1;
+  margin-top: 10px;
+  border: 2px solid transparent;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.projects__link:hover {
+  border: 2px solid #4b6cc1;
+  background-color: transparent;
+  color: #191A1D;
+}
+
 .projects__img {
   border-radius: 10px;
+  width: 360px;
+  height: 360px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media only screen and (max-width: 460px) {
