--- a/assets/scss/blocks/_nav.scss
+++ b/assets/scss/blocks/_nav.scss
@@ -29,7 +29,7 @@
   &::after {
     content: "";
     display: block;
-    width: 0%;
+    width: 0;
     height: 6px;
     background-color: #4b6cc1;
     margin-top: 17px;
