change sections padding

--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -615,7 +615,7 @@ body {
 
 .hero {
   background-color: #191A1D;
-  padding: 100px 0 200px 0;
+  padding: 100px 0 250px 0;
   position: relative;
 }
 
@@ -893,7 +893,7 @@ body {
 
 .contacts {
   background-color: #191A1D;
-  padding: 200px 0;
+  padding: 200px 0 300px 0 !important;
   position: relative;
   color: #111;
   margin-left: auto;
