--- a/assets/scss/blocks/_contacts.scss
+++ b/assets/scss/blocks/_contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   background-color: #191A1D;
-  padding: 200px 0;
+  padding: 200px 0 300px 0 !important;
   position: relative;
   color: #111;
   margin-left: auto;
