--- a/assets/scss/blocks/_hero-right.scss
+++ b/assets/scss/blocks/_hero-right.scss
@@ -9,12 +9,13 @@
 }
 
 .hero-right__img {
-  object-fit: contain;
+  object-fit: cover;
   margin-left: auto;
   margin-right: auto;
   display: block;
   padding-top: 50px;
   width: 300px;
+  height: 500px;
 }
 
 
@@ -30,7 +31,7 @@
   }
   
   .hero-right__img {
-    width: 500px;
+    width: 400px;
     height: 600px;
   }
 }
@@ -44,7 +45,8 @@
   
   .hero-right__img {
     width: 350px;
-    padding-top: 0;
+    height: 550px;
+    padding-top: 50px;
   }
 }
 
@@ -65,11 +67,12 @@
 
   .hero-right__inner {
     max-width: 320px;
-    height: 450px;
+    height: 370px;
   }
   
   .hero-right__img {
     padding-top: -50px;
     width: 250px;
+    height: 400px;
   }
 }
