--- a/assets/scss/blocks/_contacts.scss
+++ b/assets/scss/blocks/_contacts.scss
@@ -40,15 +40,18 @@
 }
 .contacts__input {
   border: none;
-  padding: 20px 30px;
-  border-radius: 50px;
+  border-bottom: 2px solid #777;
+  padding: 20px;
   margin: 10px;
   width: 60%;
   outline: none;
   resize: vertical;
+  background-color: transparent;
+  color: #fff;
 
   &:active, &:focus {
-    box-shadow: 0 0 3px 3px #777;
+    border-bottom: 2px solid #fff;
+    // color: #fff;
   }
 }
 
