--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -948,17 +948,18 @@ body {
 
 .contacts__input {
   border: none;
-  padding: 20px 30px;
-  border-radius: 50px;
+  border-bottom: 2px solid #777;
+  padding: 20px;
   margin: 10px;
   width: 60%;
   outline: none;
   resize: vertical;
+  background-color: transparent;
+  color: #fff;
 }
 
 .contacts__input:active, .contacts__input:focus {
-  -webkit-box-shadow: 0 0 3px 3px #777;
-          box-shadow: 0 0 3px 3px #777;
+  border-bottom: 2px solid #fff;
 }
 
 .contacts__btn {
