--- a/assets/scss/blocks/_projects.scss
+++ b/assets/scss/blocks/_projects.scss
@@ -87,6 +87,9 @@
   .projects__img {
     width: 300px;
   }
+  .projects__title {
+    font-size: 48px;
+  }
 }
 
 @media only screen and(max-width: 360px) {
