--- a/assets/scss/blocks/_projects.scss
+++ b/assets/scss/blocks/_projects.scss
@@ -26,6 +26,54 @@
   font-size: 56px;
   margin-left: 30px;
 }
+
+// sort btns
+.projects__btn-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.projects__btn {
+  border: none;
+  border: 2px solid transparent;
+  background-color: #191A1D;
+  color: #fff;
+  transition: all .5s ease;
+  margin: 0 10px;
+  padding: 10px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #eee;
+    border: 2px solid #191A1D;
+    color: #191A1D;
+  }
+}
+
+// search form
+.projects__form{
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+.projects__input{
+  padding: 10px 0 10px 20px;
+  background-color: transparent;
+  border: 2px solid #191A1D;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+}
+.projects__search-btn{
+  border-radius: 0 5px 5px 0;
+  border: none;
+  padding: 0;
+  padding: 8px 8px 4px 4px;
+  margin: 0;
+  background-color: #191A1D;
+  cursor: pointer;
+}
+
 .projects__list {
   display: flex;
   align-items: center;
