--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -804,6 +804,64 @@ body {
   margin-left: 30px;
 }
 
+.projects__btn-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.projects__btn {
+  border: none;
+  border: 2px solid transparent;
+  background-color: #191A1D;
+  color: #fff;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  margin: 0 10px;
+  padding: 10px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.projects__btn:hover {
+  background-color: #eee;
+  border: 2px solid #191A1D;
+  color: #191A1D;
+}
+
+.projects__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 20px 0;
+}
+
+.projects__input {
+  padding: 10px 0 10px 20px;
+  background-color: transparent;
+  border: 2px solid #191A1D;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+}
+
+.projects__search-btn {
+  border-radius: 0 5px 5px 0;
+  border: none;
+  padding: 0;
+  padding: 8px 8px 4px 4px;
+  margin: 0;
+  background-color: #191A1D;
+  cursor: pointer;
+}
+
 .projects__list {
   display: -webkit-box;
   display: -ms-flexbox;
