--- a/assets/scss/blocks/_contacts.scss
+++ b/assets/scss/blocks/_contacts.scss
@@ -78,3 +78,14 @@
     font-size: 48px;
   }
 }
+
+@media only screen and(max-width: 444px) {
+
+  .contacts__input {
+    width: 90%;
+    padding: 14px 28px;
+  }
+  .contacts__title {
+    font-size: 36px;
+  }
+}
